# 07_OrderPilot-AI

./: .coverage  .coveragerc  .flake8  .gitignore  .mcp.json.disabled  2.0  =0.25  =1.7.0  AGENTS.md  ARCHITECTURE.md  BUGFIX_AI_SHUTDOWN.md  BUGFIX_AI_SHUTDOWN_CLEANUP.md  BUGFIX_ALPACA_STREAMING.md  BUGFIX_CHART_FINAL.md  BUGFIX_EVENT_TYPES.md  BUGFIX_LIVE_CHART_DIAGNOSIS.md  BUGFIX_LIVE_CHART_TIMEZONE.md  BUGFIX_WATCHLIST_COLORS.md  BUGFIX_WATCHLIST_PERSISTENCE.md  CLAUDE.md  CLEANUP_IMPLEMENTATION_REPORT.md  CODE_ANALYSIS_REPORT.md  CODE_CLEANUP_ANALYSIS_REPORT.md  CODE_CLEANUP_SUMMARY.md  CODE_INVENTORY_REPORT.md  COMPREHENSIVE_TEST_VALIDATION.md  DEEP_CODE_ANALYSIS_REPORT.md  DELIVERABLES.md  FINAL_TEST_REPORT.md  FIND_JSON_BUTTON.md  GEMINI.md  HEATMAP_TESTS_INDEX.md  IMPLEMENTATION_SUMMARY.md  INDEX_ISSUE_15_TESTS.md  INSTALL_QSCINTILLA_WINDOWS.md  ISSUE_10_VERIFICATION_SUMMARY.txt  ISSUE_21_TESTS_README.md  ISSUE_22_FINAL_ASSESSMENT.md  LIGHTWEIGHT_CHARTS_GUIDE.md  MACD_FIX_SUMMARY.md  (+90 more)
.AI_Exchange/: PHASE_2_1_3_COMPLETION_REPORT.md  PHASE_2_1_4_COMPLETION_REPORT.md  PHASE_2_2_1_COMPLETION_REPORT.md  qa004_ui_tests_report.md  refactoring_odp.md
.ai_exchange/: code_analysis.md
.analysis/: ANALYSIS_REPORT_PHASE2.md  CC_WARNINGS_COMPLETE_LIST.md  COMMIT_MESSAGE_PHASE5.txt  EVALUATION_DIALOG_MIGRATION_STATUS.md  INVENTORY_REPORT_PHASE1.md  REFACTORING_FINAL_REPORT.md  REFACTORING_FINAL_REPORT_PHASE3B.md  REFACTORING_NOTES_REMAINING.md  REFACTORING_PLAN_EVALUATION_DIALOG.md  REFACTORING_REPORT_PHASE5_COMPLETE.md  REFACTORING_ROADMAP_PHASE5.md  analysis_results.json  (+6 more)
(+3029 files in other folders)
