[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "tradingapp"
version = "0.1.0"
description = "Modulare Desktop-Trading-Anwendung (Win11, Python) mit Broker-Streams, TA, Backtesting und OpenAI-Integration."
requires-python = ">=3.11"
dependencies = [
  "PyQt6>=6.7",
  "PyQt6-WebEngine>=6.7",
  "pyqtgraph>=0.13",
  "plotly>=5.24",
  "pandas>=2.2",
  "numpy>=1.26",
  "backtrader>=1.9.78.123",
  "tenacity>=8.4",
  "blinker>=1.8",
  "aiohttp>=3.10",
  "websockets>=12.0",
  "keyring>=25.2",
  "python-dotenv>=1.0",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "jinja2>=3.1",
  "jsonschema>=4.23",
  "pyyaml>=6.0.2",
  "sqlalchemy>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-qt>=4.4", "ruff>=0.6", "mypy>=1.11", "types-PyYAML", "types-requests"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E","F","I","UP","B","SIM","PL"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
strict = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
